--- a/index.html
+++ b/index.html
@@ -426,9 +426,10 @@
                     <textarea name="user_massage" class="contact-form-message" placeholder="Введите текст"></textarea>
                 </label>
                 <div class="contact-form-checkbox-wrapper">
-                    <imput name="accept-policy" type="checkbox" class="contact-form-checkbox" required />
-                    <label for="" class="contatc-form-checkbox-label"
-                        >Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></label>
+                    <input name="accept-policy" type="checkbox" class="contact-form-checkbox visual-hiden" id="policy-checkbox" required />
+                    <label for="policy-checkbox" class="contatc-form-checkbox-label"
+                        >Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></label
+                        >
                 </div>
                 <button type="submit" class="contact-form-submit-btn">Отправить</button>
             </form>
