--- a/portfolio.html
+++ b/portfolio.html
@@ -252,6 +252,17 @@
             </li>
         </ul>
     </div>
+    <form action="" class="subscribe-block">
+        <p class="subscribe-title">Подпишитесь на рассылку</p>
+        <div class="subscribe-content">
+            <input type="email" name="email" placeholder="E-mail">
+            <button class="subscribe-btn" type="submit">Подписаться
+                <svg class="subscribe-icon" width="24" height="24">
+                    <use href="./images/icons/sprite.svg#send"></use>
+                </svg>
+            </button>
+        </div>
+    </form>
 </div>
 </footer>
 </body>
