--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                     <use href="./images/icons/sprite.svg#close-icon"></use>
                 </svg>
             </button>
-            <p>Оставьте свои данные, мы вам перезвоним</p>
+            <p class="contact-form-title">Оставьте свои данные, мы вам перезвоним</p>
             <form class="contact-form">
                 <label class="contact-form-field">
                     <span class="contact-form-data">Имя</span>
@@ -439,7 +439,7 @@
                 <div class="contact-form-checkbox-wrapper">
                     <input name="accept-policy" type="checkbox" class="contact-form-checkbox visual-hiden" id="policy-checkbox" required />
                     <label for="policy-checkbox" class="contatc-form-checkbox-label"
-                        >Соглашаюсь с рассылкой и принимаю&nbsp;<a href="">Условия договора</a></label
+                        >Соглашаюсь с рассылкой и принимаю&nbsp;<a class="terms" href="">Условия договора</a></label
                         >
                 </div>
                 <button type="submit" class="contact-form-submit-btn">Отправить</button>
